--- a/data/uberchick-tree-view.in.ui
+++ b/data/uberchick-tree-view.in.ui
@@ -2,23 +2,12 @@
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy toplevel-contextual -->
-  <object class="GtkLabel" id="uberchick_tree_view_menu_label">
-    <property name="visible">True</property>
-    <property name="label" translatable="yes">uberchick_tree_view_menu_label</property>
-    <property name="use_markup">True</property>
-  </object>
   <object class="GtkAdjustment" id="uberchick_tree_view_max_updates_adjustment">
     <property name="value">20</property>
     <property name="lower">20</property>
     <property name="upper">100</property>
     <property name="step_increment">10</property>
     <property name="page_increment">10</property>
-  </object>
-  <object class="GtkLabel" id="uberchick_tree_view_tab_label">
-    <property name="visible">True</property>
-    <property name="label" translatable="yes">uberchick_tree_view_tab_label</property>
-    <property name="use_markup">True</property>
-    <property name="use_underline">True</property>
   </object>
   <object class="GtkTreeStore" id="uberchick_tree_view_tree_store">
     <columns>
@@ -62,6 +51,10 @@
       <column type="gint"/>
       <!-- column-name GBOOLEAN_UNREAD -->
       <column type="gboolean"/>
+      <!-- column-name GBOOLEAN_RETWEET -->
+      <column type="gboolean"/>
+      <!-- column-name GCHARARRY_RETWEETED_BY -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkAdjustment" id="uberchick_tree_view_progress_bar_adjustment">
@@ -296,7 +289,6 @@
                   <object class="GtkCellRendererText" id="uberchick_tree_view_string_update_cell_renderer_text">
                     <property name="width">1</property>
                     <property name="height">1</property>
-                    <property name="ypad">5</property>
                     <property name="yalign">0</property>
                     <property name="editable">True</property>
                     <property name="wrap_mode">word</property>
@@ -393,5 +385,51 @@
         <property name="position">2</property>
       </packing>
     </child>
+  </object>
+  <object class="GtkHBox" id="uberchick_tree_view_tab_hbox">
+    <property name="visible">True</property>
+    <child>
+      <object class="GtkLabel" id="uberchick_tree_view_tab_label">
+        <property name="visible">True</property>
+        <property name="xpad">5</property>
+        <property name="label" translatable="yes">uberchick_tree_view_tab_label</property>
+        <property name="use_markup">True</property>
+        <property name="use_underline">True</property>
+      </object>
+      <packing>
+        <property name="position">0</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkToolbar" id="uberchick_tree_view_tab_toolbar">
+        <property name="visible">True</property>
+        <property name="tooltip_markup">&lt;b&gt;Close this tab&lt;/b&gt;</property>
+        <property name="show_arrow">False</property>
+        <property name="icon_size">1</property>
+        <property name="icon_size_set">True</property>
+        <child>
+          <object class="GtkToolButton" id="uberchick_tree_view_tab_close_tool_button">
+            <property name="visible">True</property>
+            <property name="label" translatable="yes">_Close</property>
+            <property name="use_underline">True</property>
+            <property name="stock_id">gtk-close</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="homogeneous">True</property>
+          </packing>
+        </child>
+      </object>
+      <packing>
+        <property name="expand">False</property>
+        <property name="fill">False</property>
+        <property name="position">1</property>
+      </packing>
+    </child>
+  </object>
+  <object class="GtkLabel" id="uberchick_tree_view_menu_label">
+    <property name="visible">True</property>
+    <property name="label" translatable="yes">uberchick_tree_view_menu_label</property>
+    <property name="use_markup">True</property>
   </object>
 </interface>
